# pizza

./: README.md  pyproject.toml
pizza/: pizza_delivery_service.py  test.py
pizza/client/: pizza_client.py
pizza/grpc_outputs/: pizza_deliver_pb2.py  pizza_deliver_pb2.pyi  pizza_deliver_pb2_grpc.py
pizza/protos/: pizza_deliver.proto
pizza/server/: pizza_server.py  server.py
